Fixed missing border on buttons (lack of !important)

--- a/skin/edit.css
+++ b/skin/edit.css
@@ -29,6 +29,6 @@
 	padding: 0 2px;
 }
 .devtools-toolbarbutton {
-	border-radius: 2px;
-	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 2px !important;
+	border: 1px solid rgba(0,0,0,0.3) !important;
 }
